Bug 1770706 - Add more glyph padding in DrawTargetWebgl. r=aosmond,gfx-reviewers

Because DrawTargetWebgl uses subpixel quantization, we need to pad glyph textures
beyond just the 1 pixel required for anti-aliasing.

Differential Revision: https://phabricator.services.mozilla.com/D147098